# ace_ace_engine

./: .gitignore  4_18.patch  Ace开发框架新增组件开发指南：以新增MyCircle组件为例.md  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  ace_config.gni  bundle.json  ohos.build  如何新增一个组件.md
adapter/ohos/cpp/: BUILD.gn  ace_ability.cpp  ace_ability.h  ace_application_info.cpp  ace_application_info.h  ace_container.cpp  ace_container.h  ace_data_ability.cpp  ace_data_ability.h  ace_form_ability.cpp  ace_form_ability.h  ace_service_ability.cpp  ace_service_ability.h  flutter_ace_view.cpp  flutter_ace_view.h  pa_container.cpp  pa_container.h
adapter/ohos/entrance/: BUILD.gn  ace_ability.cpp  ace_ability.h  ace_application_info.cpp  ace_application_info.h  ace_container.cpp  ace_container.h  ace_data_ability.cpp  ace_form_ability.cpp  ace_form_ability.h  ace_rosen_sync_task.h  ace_service_ability.cpp  ace_service_ability.h  capability_registry.cpp  capability_registry.h  data_ability_helper_standard.cpp  data_ability_helper_standard.h  file_asset_provider.cpp  flutter_ace_view.cpp  flutter_ace_view.h  pa_container.cpp  pa_container.h  plugin_utils_impl.cpp  plugin_utils_impl.h  ui_content_impl.cpp  ui_content_impl.h  utils.h
adapter/ohos/entrance/pa_engine/: BUILD.gn  backend_delegate.h  backend_delegate_impl.cpp  backend_delegate_impl.h  pa_backend.cpp  pa_backend.h
adapter/ohos/entrance/subwindow/: subwindow_ohos.cpp  subwindow_ohos.h
adapter/ohos/entrance/window/: drag_window_ohos.cpp  drag_window_ohos.h
adapter/preview/entrance/samples/: BUILD.gn  ace_car_test.cpp  ace_card_test.cpp  ace_phone_test.cpp  ace_tablet_test.cpp  ace_tv_test.cpp  ace_watch_test.cpp  ace_wearable_test.cpp
adapter/preview/osal/: BUILD.gn  clipboard_impl.cpp  fetch_manager.cpp  frame_report.cpp  log_wrapper.cpp  request_data.h  resource_adapter_impl.cpp  resource_adapter_impl.h  resource_adapter_impl_standard.cpp  ressched_report.cpp  stage_card_parser.cpp  stage_card_parser.h  system_properties.cpp
adapter/preview/sdk/: BUILD.gn
frameworks/bridge/: BUILD.gn
frameworks/bridge/card_frontend/: BUILD.gn  card_frontend.cpp  card_frontend.h  card_frontend_delegate.cpp  card_frontend_delegate.h  js_card_parser.cpp  js_card_parser.h  media_queryer.cpp
frameworks/bridge/codec/: BUILD.gn  byte_buffer_operator.h  standard_codec_buffer_operator.cpp  standard_codec_buffer_operator.h
frameworks/bridge/common/: BUILD.gn
frameworks/bridge/common/accessibility/: BUILD.gn  accessibility_node_manager.cpp  accessibility_node_manager.h  fake_accessibility_manager.cpp  fake_accessibility_node_manager.cpp  js_accessibility_manager.cpp  js_accessibility_manager.h
frameworks/bridge/common/dom/: dom_button.cpp  dom_button.h  dom_calendar.cpp  dom_calendar.h  dom_camera.cpp  dom_camera.h  dom_chart.cpp  dom_chart.h  dom_dialog.cpp  dom_div.cpp  dom_document.cpp  dom_document.h  dom_grid_column.cpp  dom_image.cpp  dom_image.h  dom_input.cpp  dom_input.h  dom_list.cpp  dom_list.h  dom_list_item.cpp  dom_list_item.h  dom_menu.cpp  dom_menu.h  dom_navigation_bar.h  dom_node.cpp  dom_node.h  dom_option.cpp  dom_picker_base.cpp  dom_picker_base.h  dom_popup.cpp  dom_progress.cpp  dom_rich_text.cpp  dom_rich_text.h  dom_search.cpp  dom_select.cpp  dom_select.h  dom_span.cpp  dom_span.h  dom_stepper_item.cpp  dom_svg_animate_transform.h  (+33 more)
frameworks/bridge/common/inspector/: inspect_badge.cpp  inspect_badge.h  inspect_form.cpp  inspect_form.h  inspect_grid_column.cpp  inspect_grid_column.h  inspect_grid_container.cpp  inspect_grid_container.h  inspect_grid_row.cpp  inspect_grid_row.h  inspect_image_animator.cpp  inspect_list.cpp  inspect_list_item_group.cpp  inspect_node.cpp  inspect_node.h  inspect_option.cpp  inspect_panel.cpp  inspect_panel.h  inspect_picker_view.cpp  inspect_piece.cpp  inspect_piece.h  inspect_qrcode.cpp  inspect_qrcode.h  inspect_refresh.cpp  inspect_span.cpp  inspect_stepper.cpp  inspect_stepper.h  inspect_stepper_item.cpp  inspect_stepper_item.h  inspect_toggle.cpp  inspect_toggle.h  inspect_toolbar.cpp  inspect_toolbar.h  inspect_toolbar_item.cpp  inspect_toolbar_item.h  js_inspector_manager.cpp  js_inspector_manager.h
frameworks/bridge/common/manifest/: manifest_appinfo.cpp  manifest_appinfo.h  manifest_parser.cpp  manifest_parser.h  manifest_router.cpp  manifest_widget.cpp
frameworks/bridge/common/media_query/: media_query_info.cpp  media_query_info.h  media_queryer.cpp  media_queryer.h
frameworks/bridge/common/plugin_adapter/: plugin_bridge.cpp  plugin_bridge.h
frameworks/bridge/common/utils/: engine_helper.cpp  source_map.cpp  source_map.h  utils.cpp  utils.h
frameworks/bridge/declarative_frontend/: BUILD.gn  declarative_frontend.cpp  declarative_frontend.h  frontend_delegate_declarative.cpp  frontend_delegate_declarative.h  view_stack_processor.cpp  view_stack_processor.h
frameworks/bridge/declarative_frontend/engine/: bindings.h  bindings.inl  bindings_defines.h  bindings_implementation.h  bindings_implementation.inl  contentStorage.js  content_storage_set.h  js_types.h  (+12 more)
frameworks/bridge/js_frontend/: BUILD.gn  frontend_delegate.cpp  frontend_delegate.h  frontend_delegate_impl.cpp  frontend_delegate_impl.h  js_ace_page.cpp  js_ace_page.h  js_command.cpp  js_command.h  js_frontend.cpp  js_frontend.h
frameworks/bridge/pa_backend/: backend_delegate.h  backend_delegate_impl.cpp  backend_delegate_impl.h  pa_backend.cpp  pa_backend.h
frameworks/bridge/plugin_frontend/: BUILD.gn  plugin_frontend.cpp  plugin_frontend.h  plugin_frontend_delegate.cpp  plugin_frontend_delegate.h
frameworks/bridge/test/: BUILD.gn
interfaces/innerkits/ace/: BUILD.gn  declarative_module_preloader.cpp  declarative_module_preloader.h  ui_content.cpp  ui_content.h  viewport_config.h
interfaces/innerkits/ui_service_manager/: BUILD.gn
services/uiservice/: BUILD.gn  ui_service.cfg  uiservicems.gni
services/uiservice/include/: ui_mgr_service.h  ui_service_mgr_proxy.h  ui_service_mgr_stub.h
services/uiservice/src/: ui_mgr_service.cpp  ui_service_mgr_client.cpp  ui_service_mgr_proxy.cpp  ui_service_mgr_stub.cpp
(+2756 files in other folders)
